--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <main class="container"></main>
+    <main>
+      <div class="container"></div>
+    </main>
   </body>
 </html>
