--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <main>
-      <div class="container"></div>
-    </main>
+    <button class="btn btn-grid-creator">Draw a grid</button>
+
+    <main class="container"></main>
   </body>
 </html>
